"ChangeLog"

2007-02-05	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-72-merged-chpsim-02-19:
	  Branch merge.


2007-01-26	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-71:
	  AC_SUBST X11_INCLUDE and X11_LDPATH.  


	* HACKT-00-01-04-main-00-80-70:
	  configure.ac, config/guile.m4: autoconf macros for checking
		guile-config and setting appropriate AC_SUBST variables.  


2007-01-24	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-69:
	  Global Makefile maintainence.  Fixed some broken dependencies.  
	  Make.stddef: added useful strip srcdir macros


2007-01-23	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-68:
	  configure.ac: now generate dox/{chpsim,prsim}/Makefile


2007-01-21	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-64-merged-chpsim-01-54:
	  Major branch merge of -chpsim-01.
	  See src/ChangeLog for gory details.
	  Short story: we now have chpsim.  


2007-01-20	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-52:
	  New AC_OUTPUT: test/chpsim/testlib/Makefile.


2007-01-16	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-44:
	  Make.stddef and global Makefile.am clean-ups for maintainability.  


2006-12-01	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-merged-channel-02-09:
	  Branch merge.  src/ChangeLog for summary.  


2006-11-28	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-62-channel-02-02:
	  configure.ac, config/hackt.m4: added option to re-enable the
		now-obsolete unroll phase tests in test suite.  
		Unrolling is now deprecated because it has been fused
		into the create phase -- they are now one and inseparable.


2006-11-25	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-58:
	  dox/ChangeLog only -- improved LaTeX dependency management.  

